moved to supabase db

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@azure/cosmos": "latest",
+    "@supabase/supabase-js": "^2.44.2",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "latest",
     "lodash": "^4.17.21",
